<resources>
    <string name="app_name">AnimeTest</string>
    <string name="exit">Выход</string>
    <string name="test">Аниме Тест</string>
    <string name="high_score_table">Рекорды</string>
    <string name="chat">Чат</string>
    <string name="info">Инфо</string>
    <string name="click_again_to_exit">Нажмите еще раз, чтобы выйти</string>
    <string name="back">Назад</string>
    <string name="text_level">Пройдено тестов:</string>
    <string name="one">1</string>
    <string name="comment">Комментарий:</string>
    <string name="one_st_place">Место!</string>
    <string name="error_internet">Ошибка получения данных</string>
    <string name="register">Регистрация</string>
    <string name="enter_your_email">Введите ваш email:</string>
    <string name="enter_your_password">Введите ваш пароль:</string>
    <string name="I_already_have_an_account">У меня уже есть аккаунт</string>
    <string name="login">Вход</string>


</resources>