<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Screens.mainMenu.MainMenu">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background" />

    <LinearLayout
        android:id="@+id/container5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/container4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewTest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:onClick="onClick"
                    app:srcCompat="@drawable/logo"
                    tools:ignore="UsingOnClickInXml" />

                <TextView
                    android:id="@+id/textViewTest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/test"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_purple"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewTable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:onClick="onClick"
                    app:srcCompat="@drawable/logo" />

                <TextView
                    android:id="@+id/textViewHighScoreTable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/high_score_table"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_purple"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/container7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewChat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:onClick="onClick"
                    app:srcCompat="@drawable/logo" />

                <TextView
                    android:id="@+id/textViewChat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/chat"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_purple"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:onClick="onClick"
                    app:srcCompat="@drawable/logo"
                    tools:ignore="UsingOnClickInXml" />

                <TextView
                    android:id="@+id/textViewInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/info"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_purple"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>